jena-shex/src/test/files/spec/negativeStructure/1focusMissingRefdot.shex
# Unsatisfied reference to <http://a.example/S2>
<http://a.example/S1>
  @<http://a.example/S2> AND {  }
